Added unzip and wget to package install.

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -10,7 +10,7 @@ RUN yum upgrade -y
 
 # install Python 3 repo. references, Emacs, file, GCC, GFortran, Git,
 # Make, and which;
-RUN yum install centos-release-scl dos2unix emacs-nox file gcc gcc-c++ gcc-gfortran git make rubygems which -y
+RUN yum install centos-release-scl dos2unix emacs-nox file gcc gcc-c++ gcc-gfortran git make rubygems unzip which wget -y
 
 # install fUnit
 RUN gem install funit
