Replaced fUnit with FRUIT and updated prerequisites.

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -2,26 +2,28 @@
 FROM centos
 
 # ...check for any CentOS installed packages updates (while ignoring
-# errors/warnings; exit cleanly for the sake of Docker);
+# errors/warnings; exit cleanly for the sake of Docker)
 RUN yum check-update; exit 0
 
-# upgrade any CentOS installed packages updates;
+# upgrade any CentOS installed packages updates
 RUN yum upgrade -y
 
-# install Python 3 repo. references, Emacs, file, GCC, GFortran, Git,
-# Make, and which;
-RUN yum install centos-release-scl dos2unix emacs-nox file gcc gcc-c++ gcc-gfortran git make rubygems unzip which wget -y
+# install additional development packages
+RUN yum install centos-release-scl dos2unix emacs-nox file gcc gcc-c++ gcc-gfortran git make rubygem-minitest rubygem-rake rubygems unzip which wget -y
 
-# install fUnit
-RUN gem install funit
+# install FRUIT
+RUN wget -O /usr/local/src/fruit_3.4.3.zip https://sourceforge.net/projects/fortranxunit/files/latest/download
+RUN cd /usr/local/src && unzip fruit_3.4.3.zip
+RUN rm -f /usr/local/src/fruit_3.4.3.zip
+RUN cd /usr/local/src/fruit_3.4.3/fruit_processor_gem && rake install
 
-# install Python 3;
+# install Python 3
 RUN yum install rh-python36 -y
 
-# clone PRMS source;
+# clone PRMS source
 RUN cd /usr/local/src && git clone https://github.com/nhm-usgs/prms.git
 
-# build PRMS;
+# build PRMS
 RUN cd /usr/local/src/prms && make
 
 # and remain running
