Removed conditional building logic and re-factored.

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -3,10 +3,6 @@ FROM centos
 
 LABEL maintainer="ashalper@usgs.gov"
 
-# Domain: {stable,testing,unstable}; defaults to "stable" below. Run
-# like: 'docker-compose build --build-arg release=stable' to set.
-ARG release
-
 # ...check for any CentOS installed packages updates; exit cleanly for
 # the benefit of Docker
 RUN yum check-update; exit 0
@@ -15,47 +11,44 @@ RUN yum check-update; exit 0
 RUN yum upgrade -y
 
 # install additional development packages
-RUN yum install centos-release-scl gcc gcc-gfortran git make unzip \
-    which wget -y
+RUN yum install -y \
+    centos-release-scl \
+    dos2unix \
+    emacs-nox \
+    file \
+    gcc \
+    gcc-c++ \
+    gcc-gfortran \
+    git \
+    graphviz \
+    make \
+    python3 \
+    rh-python35-python-pip \
+    rubygem-minitest \
+    rubygem-rake \
+    rubygems \
+    unzip \
+    wget \
+    which
+RUN gem install funit
+      
+# install custom .bashrc file
+COPY .bashrc /root
 
-# if release not specified, default to "stable"
-RUN if [ "x$release" = "x" ] ; then \
-      export release=stable ; \
-    fi
-
-# install custom .bashrc file (maybe; see end of first conditional
-# block below)
-COPY .bashrc /tmp
-
-# if "unstable" release, install additional development packages and
-# prerequisites
-RUN if [ "x$release" = "xunstable" ] ; then \
-      yum install dos2unix emacs-nox file gcc-c++ graphviz python3 \
-	  rh-python35-python-pip rubygem-minitest rubygem-rake \
-	  rubygems -y ; \
-      gem install funit ; \
-            wget -O /usr/local/src/fruit_3.4.3.zip \
-	https://sourceforge.net/projects/fortranxunit/files/latest/download ; \
-      cd /usr/local/src && unzip fruit_3.4.3.zip ; \
-      rm -f /usr/local/src/fruit_3.4.3.zip ; \
-      cd /usr/local/src/fruit_3.4.3/fruit_processor_gem && \
-	  rake install ; \
-      printf '\n# gprof2dot installs in a weird location\n\
-export PATH="/opt/rh/rh-python35/root/usr/bin:$PATH"\n' >> \
-	  /root/.bashrc ; \
-	  mv /tmp/.bashrc /root ; \
-	else \
-	  rm -f /tmp/.bashrc ; \
-fi
-
-# clone PRMS source
+# clone PRMS 5.x source
 RUN cd /usr/local/src && \
-    git clone https://github.com/nhm-usgs/prms.git
+    git clone -b 5.0.0_rc https://github.com/nhm-usgs/prms.git
+
+# Fortran unit testing tools
+RUN wget -O /usr/local/src/fruit_3.4.3.zip \
+    https://sourceforge.net/projects/fortranxunit/files/latest/download
+RUN cd /usr/local/src && unzip fruit_3.4.3.zip
+RUN rm -f /usr/local/src/fruit_3.4.3.zip
+RUN cd /usr/local/src/fruit_3.4.3/fruit_processor_gem && \
+  rake install
 
 # "convenience" soft link
-RUN if [ "x$release" = "xunstable" ] ; then \
-      ln -s /usr/local/src/prms /root/prms ; \
-fi
+RUN ln -s /usr/local/src/prms /root/prms
 
 # ...and remain running
 CMD ["sleep", "infinity"]
