--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -5,3 +5,14 @@ services:
     image: nhdusgs/prms
     hostname: prms
     container_name: prms
+    volumes:
+     - .:/var/lib/nhm
+  onhm-fetcher-parser:
+    build: .
+    image: nhdusgs/onhm-fetcher-parser
+    hostname: onhm-fetcher-parser
+    container_name: onhm-fetcher-parser
+    volumes:
+     - .:/var/lib/nhm
+volumes:
+     .:
