Corrected image prefixes.

--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -2,14 +2,14 @@ version: '2'
 services:
   prms:
     build: .
-    image: nhdusgs/prms
+    image: nhmusgs/prms
     hostname: prms
     container_name: prms
     volumes:
      - .:/var/lib/nhm
   onhm-fetcher-parser:
     build: .
-    image: nhdusgs/onhm-fetcher-parser
+    image: nhmusgs/onhm-fetcher-parser
     hostname: onhm-fetcher-parser
     container_name: onhm-fetcher-parser
     volumes:
