Added "check" and "check-devel" packages.

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -14,6 +14,8 @@ RUN yum upgrade -y
 RUN yum install -y \
     automake \
     centos-release-scl \
+    check \
+    check-devel \
     dos2unix \
     emacs-nox \
     file \
