Changed "onhm-fetcher-parser" to "ofp" for consistency elsewhere.

--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -7,11 +7,11 @@ services:
     container_name: prms
     volumes:
      - .:/var/lib/nhm
-  onhm-fetcher-parser:
+  ofp:
     build: .
-    image: nhmusgs/onhm-fetcher-parser
-    hostname: onhm-fetcher-parser
-    container_name: onhm-fetcher-parser
+    image: nhmusgs/ofp
+    hostname: ofp
+    container_name: ofp
     volumes:
      - .:/var/lib/nhm
 volumes:
