Added Jupyter Notebook prerequisites, and:
Git clone of onhm-runners repo.

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -10,7 +10,9 @@ RUN apt-get update
 RUN apt-get -y upgrade
 
 # install additional packages
-RUN apt-get -y install gcc gfortran git jupyter-notebook make procps \
+RUN apt-get -y install dialog gcc gfortran git \
+                       jupyter-nbextension-jupyter-js-widgets \
+                       jupyter-notebook make procps python-notebook \
                        unzip wget
 
 # clone PRMS source
@@ -19,6 +21,10 @@ RUN cd /usr/local/src && \
 
 # build PRMS
 RUN cd /usr/local/src/prms && make
+
+# clone onhm-runners source
+RUN cd /usr/local/src && \
+    git clone -b develop https://github.com/nhm-usgs/onhm-runners.git
 
 # ...and remain running
 CMD ["sleep", "infinity"]
