Switched base image back to Miniconda, and:
added RUN commands to download HRU shapefiles.

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,7 +1,7 @@
-# using Minimal Jupyter Notebook Stack...
-FROM jupyter/minimal-notebook:latest
+# using Miniconda 3 as the base image...
+FROM continuumio/miniconda3:latest
 LABEL maintainer="ashalper@usgs.gov"
-USER root
+WORKDIR /root
 
 # ...check for any Debian, installed packages updates
 RUN apt-get update
@@ -9,8 +9,16 @@ RUN apt-get update
 # upgrade any Debian, installed packages updates
 RUN apt-get -y upgrade
 
-# install GFortran
-RUN apt-get -y install gfortran
+# install additional packages
+RUN apt-get -y install dialog gcc gfortran git make procps unzip wget
+
+# TODO: skip next two steps if shapefiles are already present
+
+# create data directory
+RUN mkdir -p /var/lib/nhm/hru
+# download shapefiles
+RUN wget -P /var/lib/nhm/hru -m -nH --cut-dirs=5 --user='anonymous' \
+       ftp://ftpext.usgs.gov/pub/cr/co/lakewood/nhm_hru_shp
 
 # clone PRMS source
 RUN cd /usr/local/src && \
