--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -12,13 +12,8 @@ RUN apt-get -y upgrade
 # install additional packages
 RUN apt-get -y install dialog gcc gfortran git make procps unzip wget
 
-# TODO: skip next two steps if shapefiles are already present
-
-# create data directory
+# create ofp shapefiles directory
 RUN mkdir -p /var/lib/nhm/hru
-# download shapefiles
-RUN wget -P /var/lib/nhm/hru -m -nH --cut-dirs=5 --user='anonymous' \
-       ftp://ftpext.usgs.gov/pub/cr/co/lakewood/nhm_hru_shp
 
 # clone PRMS source
 RUN cd /usr/local/src && \
