--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -19,7 +19,7 @@ RUN conda update -n base conda -y && conda env update
 RUN rm -f /root/environment.yml
 
 # create ofp directory under /var/lib
-RUN mkdir -p /var/lib/nhm/ofp
+RUN mkdir -p /var/lib/nhm/ofp/Output
 
 # clone ofp source
 RUN cd /usr/local/src && git clone -b ashalper --depth=1 \
